/*
    V1.0
*/
import { Metadata } from '@grpc/grpc-js';
import { Observable } from 'rxjs';



export class UserPermissions {
        pSubAdminPerms?: sug.SubAdminPerms;
        pSignupsOwned?: string;
        pGroupsOwned?: string;
        pRole?: sug.IUserRole;
}










